# qc

./: CMakeLists.txt  Makefile  README.md  TODO.md  basis_set.h  factorial.h  hermite_aux.h  main.cpp  orbital.cpp  orbital.h  vec3.h
assets/: 3c1b_geom.txt  benzene_geom.txt
assets/basis_sets_json/: 2zap.json  3zap.json  4zap.json  5zap.json  6zap.json  README.txt  ano-pv5z.json  ano-pvdz.json  ano-pvqz.json  ano-pvtz.json  asigmadz.json  asigmaqz.json  asigmatz.json  atzp-zora.json  aug-ano-pv5z.json  aug-ano-pvdz.json  aug-ano-pvqz.json  aug-ano-pvtz.json  aug-seg-cc-pv5z-pp.json  aug-seg-cc-pvdz-pp.json  aug-seg-cc-pvqz-pp.json  aug-seg-cc-pvtz-pp.json  aug-seg-cc-pwcv5z-pp.json  aug-seg-cc-pwcvdz-pp.json  aug-seg-cc-pwcvqz-pp.json  aug-seg-cc-pwcvtz-pp.json  cc-pvdz-f12-optri+.json  cc-pvdz-f12.json  cc-pvqz-f12-optri+.json  cc-pvqz-f12.json  cc-pvtz-f12-optri+.json  cc-pvtz-f12.json  def2-mtzvp.json  dyall-aae2z.json  dyall-aae3z.json  dyall-aae4z.json  dyall-acv2z.json  dyall-acv3z.json  dyall-acv4z.json  dyall-ae2z.json  (+69 more)
basis_set/: sto_3g_simplified.h
docs/: lda_functionals.nb
examples/: overlap_h2o.cpp
src/: atom_centered_grid.cpp  atom_centered_grid.h  basis_set.cpp  basis_set.h  bench.cpp  diis.h  functionals.h  hartree_fock.cpp  hartree_fock.h  hermite_aux.h  input_integrals.h  lda.cpp  lda.h  lebedev_15.h  main.cpp  orbital.h  uniform_grid.cpp  uniform_grid.h  vec3.h
src/basis_set/: 2zap.h  2zapa-nr-cv.h  2zapa-nr.h  3-21g.h  3zap.h  3zapa-nr-cv.h  3zapa-nr.h  4-31g.h  4zap.h  4zapa-nr-cv.h  4zapa-nr.h  5-21g.h  5zap.h  5zapa-nr-cv.h  5zapa-nr.h  6-21g.h  6-31++g.h  6-31++g_st_.h  6-31++g_st__st_-j.h  6-31++g_st__st_.h  6-31+g.h  6-31+g_st_-j.h  6-31+g_st_.h  6-31+g_st__st_.h  6-311++g(2d,2p).h  6-311++g(3df,3pd).h  6-311++g.h  6-311++g_st_.h  6-311++g_st__st_-j.h  6-311++g_st__st_.h  6-311+g(2d,p).h  6-311+g.h  6-311+g_st_-j.h  6-311+g_st_.h  6-311+g_st__st_.h  6-311g(2df,2pd).h  6-311g(d,p).h  6-311g-j.h  6-311g.h  6-311g_st_.h  (+715 more)
src/examples/: overlap_h2o.cpp
src/hartree_fock/: restricted_hf.cpp  restricted_hf.h  unrestricted_hf.cpp  unrestricted_hf.h
src/lebedev/: lebedev_003.h  lebedev_005.h  lebedev_007.h  lebedev_009.h  lebedev_011.h  lebedev_013.h  lebedev_015.h  lebedev_017.h  lebedev_019.h  lebedev_021.h  lebedev_023.h  lebedev_025.h  lebedev_027.h  lebedev_029.h  lebedev_031.h  lebedev_035.h  lebedev_041.h  lebedev_047.h  (+14 more)
tools/: parse.py  parse.py~  parse_lebedev.py  sto-3g.txt  test.txt
(+1 files in other folders)
